--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="logo">
             <img src="images/logo.png" alt="logo" width="100px" height="100px">
         </div>
-        <nav>
+        <nav id="nav" class="nav">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Templates</a></li>
@@ -26,8 +26,8 @@
                 <a href="#">Sign In</a>
                 <a href="#">Register</a>
             </div>
-            <button id="hamburger-btn"> <i class="fa-solid fa-bars"></i></button>
         </nav>
+        <button onclick="navMenu()" > <i class="fa-solid fa-bars"></i></button>
     </header>
 </section>
 <div class="section2">
@@ -255,6 +255,6 @@
         </div>
     </div>
 </footer>
-
+<script src="js/main.js"></script>
 </body>
 </html>
